# sqlalchemy_and_alembic_boilerplate

./: .gitignore  Makefile  README.md  alembic.ini  example.env  old-equirements.txt  pyproject.toml  requirements.txt
app/database/: db.py
app/database/alembic/: env.py
app/database/alembic/versions/: 10fcb470c77b_first_migration.py  51c1714093ba_created_user_sessions_table.py  5da2c2536ea7_created_tables.py  9783f2fb64a5_.py  c97db243a566_first_migration.py  e4eaec00bcae_creating_user_table.py
app/database/models/: __init__.py  model_base_class.py  sessions.py  user_sessions.py  users.py
sqlalchemy_and_alembic_boilerplate.egg-info/: PKG-INFO  SOURCES.txt
